htmlの中の.menuが.sidenavに変更

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header id="top">  
-        
+
         <div class="topmenu">
         <div class="topHeader">
             <h1>About Dog</h1>
         </div>
 
-        <div class="menu">
+        <div class="sidenav">
             <ul>
                 <li>Top</li>
                 <li>Latest</li>
