font-familyが効かないです。とりあえずheader, footer,top-imgをやりました。細かいところはまた明日の授業時間に話します

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
     </div>
 
-    <div class="contact">
+    <section class="contact">
         <h2>Contact</h2>
-        <form action="" method="GET"></form>
+        <form action="" method="GET">
         <div><input type="text" name="name" placeholder="お名前"></div>
 
         <div><input type="text" name="mail" placeholder="メールアドレス"></div>
@@ -86,8 +86,8 @@
         <p><input type="submit" value="送信">
         <a href=""></a>
         </p>
-
-    </div>
+    </form>
+    </section>
 
 <footer>
     <p>@ 2019 ALL RIGHT RESERVED</p>
