--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     </div>
 
-    <section class="contact">
+    <div class="contact">
         <h2>Contact</h2>
         <form action="" method="GET">
           <input type="text" name="name" placeholder="お名前">
